adding more json

--- a/json_jquery_assignment.html
+++ b/json_jquery_assignment.html
@@ -23,6 +23,12 @@
         };
         const my_json = JSON.stringify(person);
         console.log(my_json);
+
+    let text =    {
+            "movies":[
+
+            ]
+        };
     </script>
 </body>
 </html>
